--- a/index.html
+++ b/index.html
@@ -5,8 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denali Studio</title>
+
+    <!-- Bootstrap Link -->
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="welcome">
+      <h1>welcome</h1>
+      <h1> To Delani Studio</h1> 
+    </div>
     
+  
+   <h1>WHAT WE DO</h1>
+   <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          
+          <H3>Design</H3> 
+          <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing. Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+        </div>
+          <div class="col-md-4">
+            <h3>Development</h3>
+            <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+          </div>
+            <div class="col-md-4">
+              <h3>Product Management</h3>
+              <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve.</p>
+            </div>
+      </div>
+</div>
+   
+   
+   <link rel="stylesheet" href="js/scripts.js">
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
