--- a/index.html
+++ b/index.html
@@ -19,16 +19,34 @@
 <body>
     <div class="welcome">
       <div class="logo">
-      <img src="images/logo/logo.png" alt="">
+        <img src="images/logo/logo.png" alt="">
+      </div>
+      <br>
+      <div welcome2><h1>WELCOME</h1></div>
+      <div class="delani"><h1> TO DELANI STUDIO</h1></div>
+       <div class="amazing"><h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6></div>
+      <div class="mouse"><img src="images/services_icons/mouse_click.png" alt=""></div>
     </div>
-      <h1>WELCOME</h1>
-      <h1> TO DELANI STUDIO</h1> 
-      <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
+    <!--about us section-->
+    <div class="aboutus">
+      <h2>ABOUT US</h2>
+      <P>When you work with us,you are part of a team of committed collaborators. All aspects of our software development process are intergrated, interactive and agile.</P>
+      <p>Our approach unifies design, development and product management to create exceptional products.</p>
+      <p>We start each project by understanding your business goals,the user's needs and the product requirements</p>
+      <p>Then we help translate them into effective and elegant solutions.</p>
+    </div>
+    <!--sevices section-->
+    <div class="services">
+      <h2>SERVICES</h2>
+      <P>Before we sign a contract or write a line of code our team will spend the necessary time to understand your product vision</P>
+      <p>The outcome of this scoping session a proposal or high-level statement of work.</p>
+      <p>bassed on your requirements, we can provide acomplete offering or just the pieces you need.</p>
     </div>
     
   <!-- what we do section-->
   
    <h2>WHAT WE DO</h2>
+   <br>
    <div class="container">
       <div class="row">
         <div class="col-md-4">
