--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
             <input required name="Email" placeholder="Email..." type="email" id="email">
           </div>
         </div>
+        <br>
         <div class="message">
-            <label for="message"></label>
-              <textarea name="message">Your message here...</textarea>
+            <label for="message">Your message here...</label>
+            
         </div>
         <button type="submit">Send</button>
       </form>
