add readme contents

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
    <br>
    <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" id="designer">
           <img src="images/services_icons/design_icon.png" alt="design icon">
-          <H3>Design</H3> 
+          <H3> <span>DESIGN</span></H3> 
           <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing. </p>
           <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
         </div>
