--- a/index.html
+++ b/index.html
@@ -17,16 +17,23 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+  <!-- Image section -->
+
     <div class="welcome">
       <div class="logo">
-        <img src="images/logo/logo.png" alt="">
+        <img src="images/logo/logo.png" alt="logo">
       </div>
       <br>
-      <div welcome2><h1>WELCOME</h1></div>
-      <div class="delani"><h1> TO DELANI STUDIO</h1></div>
-       <div class="amazing"><h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6></div>
-      <div class="mouse"><img src="images/services_icons/mouse_click.png" alt=""></div>
+      <div class="w-page"><h1>WELCOME</h1>
+          <h1> TO DELANI STUDIO</h1>
+          <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
+          <div class="pic">
+            <img src="images/services_icons/mouse_click.png" alt="mouse_click">
+          </div>
+      </div>
     </div>
+
     <!--about us section-->
     <div class="aboutus">
       <h2>ABOUT US</h2>
@@ -108,20 +115,23 @@
     <div class="container2">
       <h2>CONTACT US</h2>
       <form
-        action="https://formspree.io/f/xbjwkjle" method="POST">
+      action="https://gmail.us14.list-manage.com/subscribe/post?u=9c847bb733d22db161c2137a4&amp;id=ad1ec0adaf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div id="mc_embed_signup_scroll">
         <div class="row">
           <div class="col-md-6">
             <label for="name"></label>
             <input required type="text" placeholder="Name..." id="name">
           </div>
           <div class="col-md-6">
-            <label for="email"></label>
-            <input required name="Email" placeholder="Email..." type="email" id="email">
+            <label for="mce-EMAIL">
+            </label>
+              <input type="email" placevalue="email..." name="EMAIL" class="required email" id="mce-EMAIL">
           </div>
         </div>
         <br>
         <div class="message">
-            <label for="message">Your message here...</label>
+            <label for="message"></label>
+            <textarea name="message" id="message" >Your message here...</textarea>
             
         </div>
         <button type="submit">Send</button>
@@ -151,8 +161,32 @@
 
 
 
- 
-  
+<!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px;}
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://gmail.us14.list-manage.com/subscribe/post?u=9c847bb733d22db161c2137a4&amp;id=ad1ec0adaf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+	<div id="mce-responses" class="clear foot">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9c847bb733d22db161c2137a4_ad1ec0adaf" tabindex="-1" value=""></div>
+        
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
 
 
 
