--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
 
     <!--about us section-->
+
     <div class="aboutus">
       <h2>ABOUT US</h2>
       <P>When you work with us,you are part of a team of committed collaborators. All aspects of our software development process are intergrated, interactive and agile.</P>
@@ -42,7 +43,9 @@
       <p>We start each project by understanding your business goals,the user's needs and the product requirements</p>
       <p>Then we help translate them into effective and elegant solutions.</p>
     </div>
+
     <!--sevices section-->
+
     <div class="services">
       <h2>SERVICES</h2>
       <P>Before we sign a contract or write a line of code our team will spend the necessary time to understand your product vision</P>
@@ -56,12 +59,14 @@
    <br>
    <div class="container">
       <div class="row">
+
         <div class="col-md-4" id="designer">
-          <img src="images/services_icons/design_icon.png" alt="design icon">
+          <img src="images/services_icons/design_icon.png" alt="design icon" onclick="">
           <H3> <span>DESIGN</span></H3> 
           <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing. </p>
           <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
         </div>
+
         <div class="col-md-4">
           <img src="images/services_icons/dev_icon.png" alt="development icon">
           <h3>Development</h3>
@@ -76,6 +81,9 @@
         </div>
       </div>
    </div>
+
+
+
    <!-- photo gallery-->
    <h2>PORTFOLIO</h2>
    <div class="gallery">
