add jquery fuctions

--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
           <img src="images/services_icons/dev_icon.png" alt="development icon">
 
           <h3>Development</h3>
-          <p id="dev">All engineers are fluent in the latest enterprise, mobile and web development technologies. <br>
-          They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+          <div class="toggle">
+            <p id="dev">All engineers are fluent in the latest enterprise, mobile and web development technologies. <br>
+                        They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+          </div>
         </div>
 
         
