hover effect on portfolio

--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
     <div class="gallery">
 
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3" id="img1">
           <img src="images/portfolio/work4.jpg" alt=""> 
         </div>
-        <div class="col-md-3"> 
+        <div class="col-md-3" id="img2"> 
           <img src="images/portfolio/work3.jpg" alt="">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="img3">
           <img src="images/portfolio/work2.jpg" alt=""> 
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="img4">
           <img src="images/portfolio/work1.jpg" alt="">
         </div>
       </div>
@@ -117,16 +117,16 @@
       <br>
 
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3" id="img5">
           <img src="images/portfolio/work5.jpg" alt="">
         </div>
-        <div class="col-md-3"> 
+        <div class="col-md-3" id="img6"> 
           <img src="images/portfolio/work6.jpg" alt="">
         </div>
-        <div class="col-md-3"> 
+        <div class="col-md-3" id="img7"> 
           <img src="images/portfolio/work7.jpg" alt="">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="img8">
           <img src="images/portfolio/work8.jpg" alt="">
         </div>
       </div>
