--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
    <!--contact information-->
    <br>
-    <div class="container2" style="background-image: url(/images/backgrounds/c_image.jpg);">
+    <div class="container2" style="background-image: url(./images/backgrounds/c_image.jpg)">
       <h2>CONTACT US</h2>
         <form action="" class="form">
           <label for="">
