add contact background

--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@
 
    <!--contact information-->
    <br>
-    <div class="container2" style="background-image: url(./images/backgrounds/c_image.jpg)">
-      <h2>CONTACT US</h2>
+    <div class="container2">
         <form action="" class="form">
           <label for="">
             <input type="text" placeholder="Name...">
