ft;maichimp API-linked form with mailchimp API

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!--google fonts link-->
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
   
 
     
@@ -165,13 +166,14 @@
 
    <!--contact information-->
    <br>
+   <h3>CONTACT US</h3>
     <div class="container2">
-        <form action="" class="form">
-          <label for="">
-            <input type="text" placeholder="Name...">
-            <input type="text" placeholder="Email..."> <br>
-            <textarea name="Message" id="" cols="70" rows="10">Your message here... </textarea>
-          </label>
+        <form action="https://gmail.us14.list-manage.com/subscribe/post?u=9c847bb733d22db161c2137a4&amp;id=ad1ec0adaf" method="post" target="_blank" class="form">
+            <input id="name" name="FNAME" type="text" placeholder="Name...">
+            <input name="EMAIL" type="text" placeholder="Email..."> <br>
+            <textarea name="MESSAGE" id="" cols="70" rows="10">Your message here... </textarea>
+            <button id="submit" type="submit">submit</button>
+          
         </form>
     </div>
     <br>
