ft; css styling-center and change color of text heading

--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
 
    <!--contact information-->
    <br>
-   <h3>CONTACT US</h3>
+   
     <div class="container2">
+      <h3 class="contact">CONTACT US</h3>
         <form action="https://gmail.us14.list-manage.com/subscribe/post?u=9c847bb733d22db161c2137a4&amp;id=ad1ec0adaf" method="post" target="_blank" class="form">
             <input id="name" name="FNAME" type="text" placeholder="Name...">
             <input name="EMAIL" type="text" placeholder="Email..."> <br>
